--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Gridea</title>
 <link rel="shortcut icon" href="http://jackzhao.speedowagon.com/favicon.ico?v=1674781944298">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@2.3.0/fonts/remixicon.css" rel="stylesheet">
-<link rel="stylesheet" href="http://jackzhao.speedowagon.com/styles/main.css">
+<link rel="stylesheet" href="/styles/main.css">
 <link rel="alternate" type="application/atom+xml" title="Gridea - Atom Feed" href="http://jackzhao.speedowagon.com/atom.xml">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700">
 
